airflow/logs/dag_id=Google_map/run_id=manual__2025-03-16T185112.944761+0000/task_id=transform_phase_2_task/attempt=1.log
[2025-03-16T18:51:15.520+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Google_map.transform_phase_2_task manual__2025-03-16T18:51:12.944761+00:00 [queued]>
[2025-03-16T18:51:15.543+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Google_map.transform_phase_2_task manual__2025-03-16T18:51:12.944761+00:00 [queued]>
[2025-03-16T18:51:15.543+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 2
[2025-03-16T18:51:15.601+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): transform_phase_2_task> on 2025-03-16 18:51:12.944761+00:00
[2025-03-16T18:51:15.617+0000] {standard_task_runner.py:60} INFO - Started process 192177 to run task
[2025-03-16T18:51:15.623+0000] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'Google_map', 'transform_phase_2_task', 'manual__2025-03-16T18:51:12.944761+00:00', '--job-id', '144', '--raw', '--subdir', 'DAGS_FOLDER/google_map_dag_etl.py', '--cfg-path', '/tmp/tmptn291hkm']
[2025-03-16T18:51:15.629+0000] {standard_task_runner.py:88} INFO - Job 144: Subtask transform_phase_2_task
[2025-03-16T18:51:15.868+0000] {task_command.py:423} INFO - Running <TaskInstance: Google_map.transform_phase_2_task manual__2025-03-16T18:51:12.944761+00:00 [running]> on host DESKTOP-AVAHALM.
[2025-03-16T18:51:16.242+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='master_m2si' AIRFLOW_CTX_DAG_ID='Google_map' AIRFLOW_CTX_TASK_ID='transform_phase_2_task' AIRFLOW_CTX_EXECUTION_DATE='2025-03-16T18:51:12.944761+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-16T18:51:12.944761+00:00'
[2025-03-16T18:51:16.246+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/nord/venv/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/nord/venv/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/nord/venv/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/nord/airflow/dags/google_map_dag_etl.py", line 51, in <lambda>
    python_callable=lambda: __import__('transform_phase_2').main()
  File "/home/nord/airflow/dags/transform_phase_2.py", line 89
    print("Topics extraction complete")
                                      ^
IndentationError: unindent does not match any outer indentation level
[2025-03-16T18:51:16.302+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=Google_map, task_id=transform_phase_2_task, execution_date=20250316T185112, start_date=20250316T185115, end_date=20250316T185116
[2025-03-16T18:51:16.342+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 144 for task transform_phase_2_task (unindent does not match any outer indentation level (transform_phase_2.py, line 89); 192177)
[2025-03-16T18:51:16.372+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-03-16T18:51:16.420+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
